KNOWN BUGS:
* Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
* The code sometimes uses timeout_client where it should use a server timeout.
|
Changes since 20041227a:
- Bugfix: do not crash if the groupinfo file is empty
- Change: checkpoint the ./configure cache before common failure points

20041227a: Changes since 20041215a:
- Bugfix: Fix massive memory leak in "GROUP" command and other commands
  that read the overview data. Reported by Lloyd Zusman.
- Bugfix: Free filter memory at program exit.

20041215a: Changes since 20041213a:
- Feature: when a fresh post matches a filter, reject the post.

20041213a: Changes since 20041113a:
- Bugfix: get rid of cosmetic bug "Groupinfo file damaged, ignoring line: 18"
- Change: when complaining about damaged groupinfo file, print the line
  number and encapsulate the line in double quotes.
- Change: More useful logging when getting the range of articles in a
  group, now includes the server name.
- Change: Upstream repository switched from CVS to DARCS, http://darcs.net/

20041113a: Changes since 20041007a:
- Speedup: the active file now has a header line that contains the number
  of lines. leafnode can read both the old format (requires two passes)
  and the new format (requires one pass).
- Speedup: the active file is now mmapped, rather than read, into memory.
  Patch by Robert Clark.

20041007a: Changes since 20041006a:
- Change: fetchnews will treat groups as moderated if the reported status
  flag is 'y' but the group has the tag ' (Moderated)'
- Change: leafnode will no longer print the moderator of local groups in
  the newsgroup list.
- Change: leafnode will make sure that a moderated group has the 
  ' (Moderated)' tag in its description.

20041006a: Changes since 20040920a:
- Feature: texpire offers an "-a" option to expire article based
  (as leafnode-1 did) rather than thread-based.
- Documentation: README* provided an invalid hosts.allow example that