@@ -50,6 +50,7 @@ Donald M. Burns <donald@sequel.demon.co.uk>
 Edgar Toernig <froese@gmx.de>
 Erik Beckers <erik.beckers@planet-interkom.de>
 Evert Meulie <evert@royal.net>
+Frank Wein <mcsmurf@mcsmurf.de>
 Friedhelm Hinrichs <F.Hinrichs@tu-bs.de>
 Gerd R. Greye <gerd.greye@pironet.netsurf.de>
 Gerhard Schromm <Gerhard.Schromm@student.uni-ulm.de>
