@@ -3,7 +3,12 @@ KNOWN BUGS:
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
 Changes since 20041227a:
+- Bugfix: fetchnews will only try to obtain low/high marks for a group
+  if it matches the only_group_pcre, to avoid wasting time on data that
+  is discarded right away.
 - Bugfix: do not crash if the groupinfo file is empty
+- Bugfix: handle article pointer properly for new postings in local
+  groups. Reported by Frank Wein.
 - Change: checkpoint the ./configure cache before common failure points
 
 20041227a: Changes since 20041215a:
